<resources>
    <string name="app_name">Recusos de mi dispositivo</string>
    <string name="tvVersionAndroidLB">1.Version Android:</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2.Linterna</string>
    <string name="btnOn">On</string>
    <string name="btnOff">Of</string>
    <string name="tvLevelBattery">3.Nivel de bateria</string>
    <string name="tvLevelBattery_2"></string>
    <string name="tvStorage">4.Almacenamiento</string>
    <string name="etNameFile">Nombre del archivo</string>
    <string name="btnSaveFile">Guardar</string>
    <string name="tvState">5.Conexión</string>
    <string name="btOn">Bluethoot On</string>
    <string name="btOf">Bluethoot Off</string>

</resources>